0031798: Visualization, SelectMgr_ViewerSelector - fix comparing depth of direct and indirect triangle hits

SelectMgr_RectangularFrustum now stores also a distance from picking Ray within SelectBasics_PickResult
to better prioritize results and prefer entities closer to ray.